--- a/10_DadJokes/index.html
+++ b/10_DadJokes/index.html
@@ -3,11 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Dad Jokes</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <div class="container">
+    <h3>Dont't Laugh Challenge</h3>
+    <div id="joke" class="joke">
+      joke goes here
+    </div>
+    <button id="jokeBtn" class="btn">Get Another Joke</button>
+  </div>
 
   <script src="script.js"></script>
 </body>
