--- a/17_MovieApp/index.html
+++ b/17_MovieApp/index.html
@@ -3,12 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Movie App</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <form id="form">
+      <input type="text" id="search" class="search" placeholder="Search...">
+    </form>
+  </header>
 
+  <main id="main">
+    
+  </main>
 
+  <script src="env.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
